apps/victorialogs/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: victorialogs
spec:
  selector:
    app: victorialogs
  ports:
    - name: http
      port: 9428
      targetPort: http
