apps/victorialogs/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victorialogs
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: logs.workrave.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victorialogs
                port:
                  number: 9428
  tls:
    - hosts:
        - logs.workrave.org
      secretName: victorialogs-tls
