apps/victorialogs/base/tailnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victorialogs-tailnet
spec:
  defaultBackend:
    service:
      name: victorialogs
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - victorialogs
